# lets_get_physical_VFIA

./: README.md  constants.py  util.py
HB/: Makefile  mult_iterations.c  multiplication.c  serial_server.py
evaluation/: dataframe.py  log_reader.py  sig_eval.py  transform_format.py  unique_output.py
evaluation/plots/: fault_bar.py  faults_per_delay.py  freq_voltage.py  plot_3d.py  plot_stats.py  sgx_fault.py
pc/: multiplication_attack.py  new_mult_attack.py  pico_serial.py  picoboard.py  sgx_attack.py  ssh.py
pico/: CMakeLists.txt  README.md  code.c  functions.py  nuke.c
scripts/: sgx-script.sh  startup.sh
sgx-test/crt_rsa/: Makefile
sgx-test/crt_rsa/App/: App.cpp  App.h
sgx-test/crt_rsa/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
udp/: broadcast_log.py  client.py  hackboard.py  test.py  two_way.py
voltage/: convert_voltage.py  dyno_plot.py  plot.py  read_voltage.py  write_voltage.py
